# ShadBot

./: .replit  README.md  RELEASE_NOTES.md  TRY_ONLINE.md  index.html  main.py  pyproject.toml  requirements.txt  responses.json  run.sh  run_shadbot.bat  run_shadbot_web.bat  setup_and_run.sh  shadbot.py  shadbot_web.py
docs/: index.html
templates/: index.html
